--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <h1><a href="index.html">Tarit Goswami</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Software Developer </span> <br><h4>@<b style="color:yellow";>IEM</b><b style="color:blue;">Labs</b><b style="color:yellow;">.&nbsp; &nbsp; &nbsp;</b> </h4> </h2>
+      <h2>I'm a passionate <span>Software&nbsp;Developer </span> <br><h4><b style="color:yellow";>IEM</b><b style="color:blue;">Labs</b><b style="color:yellow;">.&nbsp; &nbsp; &nbsp;</b> </h4> </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
