Updated current job role

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
             <div class="resume-item">
             <h4>Software Developer, IEM Labs</h4>
             <h5>July, 2020 - present</h5>
-            <p><em>Godrej Genesis Building, Saltlake, Kolkata</em></p><strong>Technologies working on:</strong> Java, PHP, Javascript, jQuery, Firebase
+            <p><em>Saltlake, Kolkata</em></p><strong>Technologies working on:</strong> Java, PHP, Javascript, jQuery, Firebase
             <p>
             </p><ul>
               
