--- a/index.html
+++ b/index.html
@@ -241,16 +241,16 @@
           </div>
 
           <div class="progress">
-            <span class="skill">Pandas<i class="val">85%</i></span>
+            <span class="skill">HTML &amp; CSS<i class="val">85%</i></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Sklearn <i class="val">85%</i></span>
+            <span class="skill">PHP <i class="val">80%</i></span>
             <div class="progress-bar-wrap">
-              <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+              <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
             </div>
           </div>
 
@@ -422,7 +422,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="icofont-dashboard-web"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/XHT5ZDJANB8E" target="_blank">Accessing Web Data Using Python</a></h4>
+            <h4><a>Accessing Web Data Using Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -430,7 +430,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
               <div class="icon"><i class="icofont-robot"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/FZ9BF4DKX58T" target="_blank">Machine Learning with Python</a></h4>
+            <h4><a>Machine Learning with Python</a></h4>
             <p>Offered by <strong>IBM</strong></p>
           </div>
         </div>
@@ -438,7 +438,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="icofont-badge"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/JME3L9T5G6GW" target="_blank">Object Oriented Programming in Java</a></h4>
+            <h4><a>Object Oriented Programming in Java</a></h4>
             <p>Offered by <strong>University of California, San Diego</strong></p>
           </div>
         </div>
@@ -446,7 +446,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-web"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/records/VYM6Q7XYTXLS" target="_blank">Internet History, Technology and Security</a></h4>
+            <h4><a>Internet History, Technology and Security</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -454,7 +454,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-database"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/BZEPB2236GDR" target="_blank">Using Database with Python</a></h4>
+            <h4><a>Using Database with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -470,7 +470,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-data"></i></div>
-            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/FJFZQFTHKYRG" target="_blank">Understanding and Visualizing Data with Python</a></h4>
+            <h4><a>Understanding and Visualizing Data with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
