--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-dashboard-web"></i></div>
+            <div class="icon"><i class="icofont-dashboard-web" style="position: relative;"></i></div>
             <h4><a>Accessing Web Data Using Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
@@ -429,7 +429,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
-              <div class="icon"><i class="icofont-robot"></i></div>
+              <div class="icon"><i class="icofont-robot" style="position: relative;"></i></div>
             <h4><a>Machine Learning with Python</a></h4>
             <p>Offered by <strong>IBM</strong></p>
           </div>
@@ -437,7 +437,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-badge"></i></div>
+            <div class="icon"><i class="icofont-badge" style="position: relative;"></i></div>
             <h4><a>Object Oriented Programming in Java</a></h4>
             <p>Offered by <strong>University of California, San Diego</strong></p>
           </div>
@@ -445,7 +445,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-web"></i></div>
+            <div class="icon"><i class="icofont-web" style="position: relative;"></i></div>
             <h4><a>Internet History, Technology and Security</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
@@ -453,7 +453,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-database"></i></div>
+            <div class="icon"><i class="icofont-database" style="position: relative;"></i></div>
             <h4><a>Using Database with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
@@ -461,7 +461,7 @@
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-code"></i></div>
+            <div class="icon"><i class="icofont-code" style="position: relative;"></i></div>
             <h4><a href="https://bit.ly/tg-ood" target="_blank">Object Oriented Design in Java</a></h4>
             <p>Offered by Imtiaz Ahmed, SDE at Goldman Sachs at <strong>Udemy</strong></p>
           </div>
@@ -469,7 +469,7 @@
           
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
-            <div class="icon"><i class="icofont-data"></i></div>
+            <div class="icon"><i class="icofont-data" style="position: relative;"></i></div>
             <h4><a>Understanding and Visualizing Data with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
