--- a/index.html
+++ b/index.html
@@ -209,21 +209,21 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">Python 3 <i class="val">90%</i></span>
+            <span class="skill">Python 3 <b class="val">90%</b></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">Java <i class="val">80%</i></span>
+            <span class="skill">Java <b class="val">80%</b></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
             </div>
           </div>
 
           <div class="progress">
-            <span class="skill">C <i class="val">85%</i></span>
+            <span class="skill">C <b class="val">85%</b></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
             </div>
@@ -234,7 +234,7 @@
         <div class="col-lg-6">
 
           <div class="progress">
-            <span class="skill">SQL <i class="val">85%</i></span>
+            <span class="skill">SQL <b class="val">85%</b></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
             </div>
@@ -248,7 +248,7 @@
           </div>
 
           <div class="progress">
-            <span class="skill">PHP <i class="val">80%</i></span>
+            <span class="skill">PHP <b class="val">80%</b></span>
             <div class="progress-bar-wrap">
               <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
             </div>
@@ -346,7 +346,7 @@
             <p>I have completed my 4 year graduation degree in Computer Science and Engineering. </p>
           </div>
            <div class="resume-item">
-            <h4>Senior Education (12th), State Board </h4>
+            <h4>Senior Secondary Education (12th), State Board </h4>
             <h5>2015</h5>
             <p><em>Bankura Banga Vidyalaya, West Bengal, India</em></p>
             <p>I have completed my 12th with overall 87.8%. </p>
@@ -422,7 +422,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="icofont-dashboard-web" style="position: relative;"></i></div>
-            <h4><a>Accessing Web Data Using Python</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/XHT5ZDJANB8E" target="_blank">Accessing Web Data Using Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -430,7 +430,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
           <div class="icon-box">
               <div class="icon"><i class="icofont-robot" style="position: relative;"></i></div>
-            <h4><a>Machine Learning with Python</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/FZ9BF4DKX58T" target="_blank">Machine Learning with Python</a></h4>
             <p>Offered by <strong>IBM</strong></p>
           </div>
         </div>
@@ -438,7 +438,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="icofont-badge" style="position: relative;"></i></div>
-            <h4><a>Object Oriented Programming in Java</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/JME3L9T5G6GW" target="_blank">Object Oriented Programming in Java</a></h4>
             <p>Offered by <strong>University of California, San Diego</strong></p>
           </div>
         </div>
@@ -446,7 +446,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-web" style="position: relative;"></i></div>
-            <h4><a>Internet History, Technology and Security</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/records/VYM6Q7XYTXLS" target="_blank">Internet History, Technology and Security</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -454,7 +454,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-database" style="position: relative;"></i></div>
-            <h4><a>Using Database with Python</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/BZEPB2236GDR" target="_blank">Using Database with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -470,7 +470,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4">
           <div class="icon-box">
             <div class="icon"><i class="icofont-data" style="position: relative;"></i></div>
-            <h4><a>Understanding and Visualizing Data with Python</a></h4>
+            <h4><a href="https://www.coursera.org/account/accomplishments/certificate/FJFZQFTHKYRG" target="_blank">Understanding and Visualizing Data with Python</a></h4>
             <p>Offered by <strong>University of Michigan</strong></p>
           </div>
         </div>
@@ -497,7 +497,7 @@
 
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-map"></i>
+            <i class="bx bx-map" style="position: relative;"></i>
             <h3>My Address</h3>
             <p>Bankura, West Bengal <br/> India</p>
           </div>
@@ -505,7 +505,7 @@
 
         <div class="col-md-6 mt-4 mt-md-0 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-share-alt"></i>
+            <i class="bx bx-share-alt" style="position: relative;"></i>
             <h3>Social Profiles</h3>
             <div class="social-links">
        
@@ -519,7 +519,7 @@
 
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
-            <i class="bx bx-envelope"></i>
+            <i class="bx bx-envelope" style="position: relative;"></i>
             <h3>Email Me</h3>
             <a href="mailto:tarit.goswami.2@gmail.com" target="_blank">tarit.goswami.2@gmail.com</a>
           </div>
