--- a/index.html
+++ b/index.html
@@ -58,7 +58,53 @@
   .backpack.dropzone.hover .animation {
     animation: sxt-play-anim-hover 0.91s steps(21);
     animation-fill-mode: forwards;
-    background: url("img/hoverstate.jpeg") left center; }
+    background: url("img/hoverstate.jpeg") left center; 
+  }
+  
+  /* style for CV button */
+  #cv_btn {
+    position: relative;
+    display: inline-block;
+    padding: 12px 36px;
+    margin: 10px 0;
+    color: #fff;
+    text-decoration: none;
+    text-transform: uppercase;
+    font-size: 18px;
+    border-radius: 40px;
+    margin-right: 5px;
+    margin-bottom: 5px;
+    margin-top: 5px;
+    /*
+    background: linear-gradient(90deg, #0162c8, #55e7fc);
+    */
+    background: linear-gradient(90deg, #28863E, #143059);
+    overflow: hidden;
+    cursor: pointer;
+  }
+
+  #cv_btn > span {
+    position: absolute;
+    background: #fff;
+    transform: translate(-50%, -50%);
+    pointer-events: none;
+    border-radius: 50%;
+    animation: animate 1s linear infinite;
+  }
+
+  @keyframes animate {
+    0% {
+      width: 0px;
+      height: 0px;
+      opacity: 0.5;
+    }
+
+    100% {
+      width: 400px;
+      height: 400px;
+      opacity: 0.5;
+    }
+  }
 
 @keyframes sxt-play-anim-hover {
   from {
@@ -94,7 +140,10 @@
       <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Software&nbsp;Developer </span> <br><h4><b style="color:yellow";>IEM</b><b style="color:blue;">Labs</b><b style="color:yellow;">.&nbsp; &nbsp; &nbsp;</b> </h4> </h2>
+      <h2>I'm a passionate <span>Software&nbsp;Developer </span> <br><h4><b style="color:yellow";>IEM</b><b style="color:blue;">Labs</b><b style="color:yellow;">.&nbsp; &nbsp; &nbsp;</b> </h4> 
+        <!-- GET CV button -->
+        <div id="cv_btn">Get CV</div>
+      </h2>
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
@@ -614,6 +663,24 @@
       createParticle(x, y);
       });
 
+  </script>
+  
+  <!-- script for CV button click -->
+  <script type="text/javascript">
+    const cvBtn = document.getElementById('cv_btn');
+    cvBtn.addEventListener('click', function(e) {
+        let x = e.clientX - e.target.offsetLeft;
+        let y = e.clientY - e.target.offsetTop;
+
+        let ripples = document.createElement('span');
+        ripples.style.left = x + 'px';
+        ripples.style.top = y + 'px';
+        this.appendChild(ripples);
+
+        setTimeout(() => {
+          ripples.remove()
+        }, 1000);
+    })
   </script>
 
 
