updated color of IEMLabs logo

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
       <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a passionate <span>Software&nbsp;Developer </span> <br><h4><b style="color:yellow";>IEM</b><b style="color:blue;">Labs</b><b style="color:yellow;">.&nbsp; &nbsp; &nbsp;</b> </h4> 
+      <h2>I'm a passionate <span>Software&nbsp;Developer </span> <br><h4><b style="color: #FFEB00";>IEM</b><b style="color: #143059;">Labs</b><b style="color: #FFEB00;">.&nbsp; &nbsp; &nbsp;</b> </h4> 
         <!-- GET CV button -->
         <div id="cv_btn">Get CV</div>
       </h2>
