--- a/index.html
+++ b/index.html
@@ -385,7 +385,10 @@
         <a 
         href="mailto:tarit.goswami.2@gmail.com?subject=I+am+a+recruiter+from+____&body=Hi+Tarit%2C%0D%0AI+am+____%2C+from+____.+Can+you+send+me+your+resume%3F%0D%0A%0D%0ARegards%2C%0D%0A_______" 
         target="_blank">
-          <div id="cv_btn" class="md-4">Are you a recruiter? <br> Contact me</div>
+          <form id="cv_btn" class="md-4" data-netlify-recaptcha="true" data-netlify="true">
+            Are you a recruiter? <br> Contact me
+            <div data-netlify-recaptcha="true"></div>
+          </form>
         </a>
       </div>
 
