adding reCaptcha style

--- a/index.html
+++ b/index.html
@@ -386,10 +386,17 @@
         href="mailto:tarit.goswami.2@gmail.com?subject=I+am+a+recruiter+from+____&body=Hi+Tarit%2C%0D%0AI+am+____%2C+from+____.+Can+you+send+me+your+resume%3F%0D%0A%0D%0ARegards%2C%0D%0A_______" 
         target="_blank">
           <form data-netlify-recaptcha="true" data-netlify="true">
-            <div id="cv_btn" class="md-4">
-              Are you a recruiter? <br> Contact me
+            <div class="row">
+              <div class="col-md-4">
+                <div id="cv_btn" class="md-4">
+                  Are you a recruiter? <br> Contact me
+                </div>
+              </div>
+
+              <div class="col-md-6">
+                <div data-netlify-recaptcha="true"></div>
+              </div>
             </div>
-            <div data-netlify-recaptcha="true"></div>
           </form>
         </a>
       </div>
