adding reCaptcha style

--- a/index.html
+++ b/index.html
@@ -387,13 +387,13 @@
         target="_blank">
           <form data-netlify-recaptcha="true" data-netlify="true">
             <div class="row">
-              <div class="col-md-4">
+              <div class="col-md-4 col-sm-12 col">
                 <div id="cv_btn" class="md-4">
                   Are you a recruiter? <br> Contact me
                 </div>
               </div>
 
-              <div class="col-md-6">
+              <div class="col-md-6 col-sm-12 col mt-3">
                 <div data-netlify-recaptcha="true"></div>
               </div>
             </div>
