adding recaptcha style

--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
         <a 
         href="mailto:tarit.goswami.2@gmail.com?subject=I+am+a+recruiter+from+____&body=Hi+Tarit%2C%0D%0AI+am+____%2C+from+____.+Can+you+send+me+your+resume%3F%0D%0A%0D%0ARegards%2C%0D%0A_______" 
         target="_blank">
-          <form data-netlify-recaptcha="true" data-netlify="true">
+          <form method="GET" data-netlify-recaptcha="true" data-netlify="true">
             <div class="row">
               <div class="col-md-4 col-sm-12 col">
                 <div id="cv_btn" class="md-4">
@@ -393,7 +393,9 @@
                 </div>
               </div>
 
-              <div class="col-md-6 col-sm-12 col mt-3">
+              <div class="col-md-1 col-sm-12"></div>
+
+              <div class="col-md-6 col-sm-12 mt-3">
                 <div data-netlify-recaptcha="true"></div>
               </div>
             </div>
