updating security for recruiter contact mailto button

--- a/index.html
+++ b/index.html
@@ -388,9 +388,9 @@
                 <a 
                   href="mailto:tarit.goswami.2@gmail.com?subject=I+am+a+recruiter+from+____&body=Hi+Tarit%2C%0D%0AI+am+____%2C+from+____.+Can+you+send+me+your+resume%3F%0D%0A%0D%0ARegards%2C%0D%0A_______" 
                   target="_blank">
-                  <div id="cv_btn" class="md-4">
+                  <submit id="cv_btn" class="md-4">
                     Are you a recruiter? <br> Contact me
-                  </div>
+                  </submit>
                 </a>
               </div>
 
