--- a/index.html
+++ b/index.html
@@ -610,7 +610,7 @@
       <!-- <script type="text/javascript">
           (function () {
               var options = {
-                  whatsapp: "+918535961825", // WhatsApp number
+                  whatsapp: "+91xxxxxxxxxx", // WhatsApp number
                   call_to_action: "Are you a recruiter? Contact me", // Call to action
                   position: "right", // Position may be 'right' or 'left'
               };
