adding weather in contact section

--- a/index.html
+++ b/index.html
@@ -631,7 +631,21 @@
           })();
       </script>
        -->
-       <p>Abra ca dabra</p>
+
+       <!-- Temperature section -->
+       <div class="temp-wrapper mt-5">
+        <div class="pt-1">
+          <div class="location">
+            <b class="location-timezone">Timezone</b>
+            <canvas class="icon" width="128" height="128"></canvas>
+            </div>
+
+            <div class="temperature">
+              <b class="temperature-degree">34</b><span>F</span>
+              <div class="temperature-description">It's frigging cold</div>
+            </div>
+          </div>
+        </div>
     
     </div>
   </section><!-- End Contact Section -->
@@ -737,6 +751,9 @@
         }, 1000);
     }) */
   </script>
+
+  <!-- For weather icon forcast section -->
+  <script type="text/javascript" src="assets/vendor/skycons.js"></script>
 
 
 </body></html>
