--- a/index.html
+++ b/index.html
@@ -633,16 +633,16 @@
        -->
 
        <!-- Temperature section -->
-       <div class="temp-wrapper mt-5">
+       <div class="temp-wrapper mt-5 mb-5">
         <div class="pt-1">
           <div class="location">
             <b class="location-timezone">Timezone</b>
-            <canvas class="icon" width="128" height="128"></canvas>
+            <canvas class="icon" width="100" height="100"></canvas>
             </div>
 
             <div class="temperature">
-              <b class="temperature-degree">34</b><span>F</span>
-              <div class="temperature-description">It's frigging cold</div>
+              <b class="temperature-degree"></b><span>&nbsp;F</span>
+              <div class="temperature-description"></div>
             </div>
           </div>
         </div>
