--- a/index.html
+++ b/index.html
@@ -636,12 +636,13 @@
        <div class="temp-wrapper mt-5 mb-5">
         <div class="pt-1">
           <div class="location">
-            <b class="location-timezone">Timezone</b>
+            <b>Weather at your place</b> <br>
+            <b class="location-timezone"></b>
             <canvas class="icon" width="100" height="100"></canvas>
             </div>
 
             <div class="temperature">
-              <b class="temperature-degree"></b><span>&nbsp;F</span>
+              <b class="temperature-degree"></b>34<span>&nbsp;F</span>
               <div class="temperature-description"></div>
             </div>
           </div>
