--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
           <div class="location">
             <b>Weather at your place</b> <br>
             <b class="location-timezone"></b>
-            <canvas class="icon" width="100" height="100"></canvas>
+            <!-- <canvas class="icon" width="100" height="100"></canvas> -->
             </div>
 
             <div class="temperature">
