added google map iframe of my hometown

--- a/index.html
+++ b/index.html
@@ -631,23 +631,31 @@
           })();
       </script>
        -->
+       <div class="row">
+          <div class="col-sm-12 col-md-12 col-lg-5">
+            <!-- Temperature section -->
+            <div class="temp-wrapper mt-5 mb-3">
+              <div class="pt-1">
+                <div class="location">
+                  <b class="weather-head">Weather at your place</b> <br> <em style="font-size: 14px;">Ensure your location is on</em> <br>
+                  <b class="location-timezone"></b>
+                  <!-- <canvas class="icon" width="100" height="100"></canvas> -->
+                  </div>
 
-       <!-- Temperature section -->
-       <div class="temp-wrapper mt-5 mb-5">
-        <div class="pt-1">
-          <div class="location">
-            <b class="weather-head">Weather at your place</b> <sup>Ensure your location is on</sup> <br>
-            <b class="location-timezone"></b>
-            <!-- <canvas class="icon" width="100" height="100"></canvas> -->
+                  <div class="temperature">
+                    <b class="temperature-degree"></b><span>&nbsp;</span>
+                    <div class="temperature-description"></div>
+                  </div>
+                </div>
+              </div>
             </div>
 
-            <div class="temperature">
-              <b class="temperature-degree"></b><span>&nbsp;F</span>
-              <div class="temperature-description"></div>
+
+            <div class="col-sm-12 col-md-12 col-lg-6 mt-5 mb-6">
+              <iframe class="rounded" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d58662.08840397102!2d87.02802621773223!3d23.229236045608822!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39f7a58c5fc2b411%3A0xfdbd0b45c0b4aa70!2sBankura%2C%20West%20Bengal!5e0!3m2!1sen!2sin!4v1598811054158!5m2!1sen!2sin" frameborder="0" width="100%" height="100%" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             </div>
           </div>
-        </div>
-    
+        
     </div>
   </section><!-- End Contact Section -->
 
