--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-            <h2>I'm a <span>Cloud&nbsp;Engineer(L4) </span> <br><br> Working as a part of <span>Premium&nbsp;Support&nbsp;team</span> at<br><br>
+            <h2>I'm a <span>Cloud&nbsp;Engineer(L4) </span> <br><br> In <span>Network and Security</span> team at<br><br>
                 <!-- <h4><b style="color: #FF9900">amazon</b></h4> -->
                 <!-- <h4><img src="img/aws.svg" width="200"></h4> -->
                 <h4><img src="img/aws-2.svg" width="100">&nbsp;&nbsp;&nbsp;</h4>
@@ -234,7 +234,7 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
                     <p class="font-italic">
-                        I am a Computer Science and Engineering Graduate from <a href="http://www.jgec.ac.in">JGEC</a>. </p>
+                        I am a Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -436,25 +436,6 @@
             <div class="section-title">
                 <h2>Resume</h2>
                 <p>Check My Resume</p>
-
-                <!-- GET CV button -->
-                <form method="GET" data-netlify-recaptcha="true" data-netlify="true">
-                    <div class="row">
-                        <div class="col-md-4 col-sm-12 col">
-                            <a href="mailto:taritg.public@gmail.com?subject=I+am+a+recruiter+from+____&body=Hi+Tarit%2C%0D%0AI+am+____%2C+from+____.+Can+you+send+me+your+resume%3F%0D%0A%0D%0ARegards%2C%0D%0A_______" target="_blank">
-                                <submit id="cv_btn" class="md-4">
-                                    Are you a recruiter? <br> Contact me
-                                </submit>
-                            </a>
-                        </div>
-
-                        <div class="col-md-1 col-sm-12"></div>
-
-                        <div class="col-md-6 col-sm-12 mt-3">
-                            <div data-netlify-recaptcha="true"></div>
-                        </div>
-                    </div>
-                </form>
             </div>
 
             <div class="row">
@@ -463,7 +444,7 @@
                     <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
 
-                        <p><em>Innovative and deadline-driven software developer with experience in Python, Java, SQL and Machine Learning related technologies. An enthusiastic fresher with highly motivated and leadership skills having bachelors of technology degree in Computer Science Engineering. Always willing to innovate the new things which can improve the existing technology. Seeking for position where I can apply my skills and contribute to real-world projects. I will love to learn new technologies to achieve organizational as well as personal goals.</em></p>
+                        <p>Currently working at AWS Security team on services Identity and Access Management, AWS Cognito, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
 
                     </div>
 
@@ -499,8 +480,11 @@
                         <p>
                         </p>
                         <ul>
-                            <li>Joined Premium Support team</li>
-
+                            <li>Working as a part of Network and Security team</li>
+                            <li>Identity and Access Management (<a href="https://aws.amazon.com/iam/">IAM</a>)</li>
+                            <li>Amazon <a href="https://aws.amazon.com/cognito/">Cognito</a></li>
+                            <li>AWS <a href="https://aws.amazon.com/kms/">KMS</a></li>
+                            <li>Amazon Certificate Manager (<a href="https://aws.amazon.com/certificate-manager/">ACM</a>)</li>
                         </ul>
                     </div>
 
