--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-            <h2>I'm a <span>Cloud&nbsp;Engineer(L4) </span> <br><br> In <span>Network and Security</span> team at<br><br>
+            <h2>I'm a <span>Cloud&nbsp;Engineer(Associate/L4) </span> <br><br> at<br><br>
                 <!-- <h4><b style="color: #FF9900">amazon</b></h4> -->
                 <!-- <h4><img src="img/aws.svg" width="200"></h4> -->
                 <h4><img src="img/aws-2.svg" width="100">&nbsp;&nbsp;&nbsp;</h4>
@@ -234,7 +234,7 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
                     <p class="font-italic">
-                        I am a Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
+                        I am a Cloud Engineer (Associate) at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -444,7 +444,7 @@
                     <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
 
-                        <p>Currently working at AWS Security team on services Identity and Access Management, AWS Cognito, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
+                        <p>Currently working at AWS on services Identity and Access Management, AWS Cognito, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
 
                     </div>
 
