--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-            <h2>I'm a <span>Cloud&nbsp;Engineer(Associate/L4) </span> <br><br> at<br><br>
+            <h2>I'm a <span>Cloud&nbsp;Engineer (Associate) </span> at<br><br>
                 <!-- <h4><b style="color: #FF9900">amazon</b></h4> -->
                 <!-- <h4><img src="img/aws.svg" width="200"></h4> -->
                 <h4><img src="img/aws-2.svg" width="100">&nbsp;&nbsp;&nbsp;</h4>
@@ -478,9 +478,9 @@
                         <h5>January, 2021 - Present</h5>
                         <p><em>Hyderabad, India</em></p>
                         <p>
+                            Working on these services:
                         </p>
                         <ul>
-                            <li>Working as a part of Network and Security team</li>
                             <li>Identity and Access Management (<a href="https://aws.amazon.com/iam/">IAM</a>)</li>
                             <li>Amazon <a href="https://aws.amazon.com/cognito/">Cognito</a></li>
                             <li>AWS <a href="https://aws.amazon.com/kms/">KMS</a></li>
