--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
                     <p class="font-italic">
-                        I am a Cloud Engineer (Associate) at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
+                        I am Cloud Engineer - 1 at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
@@ -246,7 +246,7 @@
                         </div>
                     </div>
                     <p>
-                        I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. I was an intern at BARC. Areas of interest include Data structures and Algorithms, RDBMS, System Design, Object Oriented Programming(OOPs). <br><br>
+                        I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
                             <li>&#x274F Love to solve challenging problems</li>
                             <li>&#x274F Biased for action</li>
@@ -308,21 +308,21 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill">Python 3 <b class="val">90%</b></span>
+                        <span class="skill">Security and Cryptography <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Java <b class="val">80%</b></span>
+                        <span class="skill">AWS Cognito <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">C <b class="val">85%</b></span>
+                        <span class="skill">AWS Key Management Service <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
                         </div>
@@ -333,21 +333,21 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill">SQL <b class="val">85%</b></span>
+                        <span class="skill">Amazon Certificate Manager <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">HTML &amp; CSS<b class="val">85%</b></span>
+                        <span class="skill">Authentication and authorization architecture <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">PHP <b class="val">80%</b></span>
+                        <span class="skill">Troubleshooting <b class="val"></b></span>
                         <div class="progress-bar-wrap">
                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
                         </div>
@@ -371,26 +371,26 @@
                 <div class="col-lg-3 col-md-4">
                     <div class="icon-box">
                         <i class="icofont-laptop" style="color: #ffbb2c;"></i>
-                        <h3>Software Developement</h3>
+                        <h3>System Design</h3>
                     </div>
                 </div>
 
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="icofont-robot" style="color: #5578ff;"></i>
-                        <h3>Machine Learning</h3>
+                        <h3>Authentication and Authorization architecture</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
                     <div class="icon-box">
                         <i class="icofont-site-map" style="color: #e80368;"></i>
-                        <h3>Object Oriented Design</h3>
+                        <h3>Cloud Security and Cryptography</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
                     <div class="icon-box">
                         <i class="icofont-database" style="color: #e361ff;"></i>
-                        <h3>Database</h3>
+                        <h3>Solving complex problems</h3>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 mt-4">
@@ -452,10 +452,25 @@
                 </div>
                 <div class="col-lg-6">
                     <h3 class="resume-title">Professional Experience</h3>
+                    
+                    <div class="resume-item">
+                        <h4>Cloud Engineer - I, Amazon Web Services</h4>
+                        <h5>April, 2022 - Present</h5>
+                        <p><em>Hyderabad, India</em></p>
+                        <p>
+                            My skillset includes:
+                        </p>
+                        <ul>
+                            <li>Building solutions using Cloud architecture which involves services like AWS Cognito, API Gateway, Lambda, Elastic Load Balancer, Amazon Certificate Manager, CloudTrail etc.</li>
+                            <li>Troubleshoot issues and provide solution to fix the issue</li>
+                            <li>Invent workaround for different use-cases</li>
+                            <li>As a part of Security and Cryptography team, assist customers to build secure, resilient, available architecture. Also, troubleshoot existing customer architecture issue and provide solution to fix it.</li>
+                        </ul>
+                    </div>
 
                     <div class="resume-item">
-                        <h4>Cloud Engineer(L4), Amazon Web Services</h4>
-                        <h5>January, 2021 - Present</h5>
+                        <h4>Cloud Engineer(Associate), Amazon Web Services</h4>
+                        <h5>January, 2021 - March, 2022</h5>
                         <p><em>Hyderabad, India</em></p>
                         <p>
                             Working on these services:
