--- a/index.html
+++ b/index.html
@@ -469,24 +469,25 @@
                     </div>
 
                     <div class="resume-item">
-                        <h4>Cloud Engineer(Associate), Amazon Web Services</h4>
-                        <h5>January, 2021 - March, 2022</h5>
-                        <p><em>Hyderabad, India</em></p>
+                        <h4>Cloud Engineer (Security and Cryptography), Amazon Web Services</h4>
+                        <h5>January, 2021 - Present</h5>
+                        <p><em>India</em></p>
                         <p>
-                            Working on these services:
+                            Everyday I assist AWS customers solve complex problems on below services while they develop applications backed by AWS services. Also, I provide architectural guidance and best practices for AWS security services to customers ranging from small startups to large Enterprises having billions of users. I have following certifications: AWS Security Speciality, AWS Solutions Architect - Professional. I am one of the Subject Matter Experts (SME) for Amazon Cognito service - a fully managed authentication and authorization service. Have received 10+ awards till date - for best performance and for project work.
                         </p>
                         <ul>
                             <li>Identity and Access Management (<a href="https://aws.amazon.com/iam/">IAM</a>)</li>
                             <li>Amazon <a href="https://aws.amazon.com/cognito/">Cognito</a></li>
                             <li>AWS <a href="https://aws.amazon.com/kms/">KMS</a></li>
+                            <li>AWS (<a href="https://aws.amazon.com/cloudhsm/">CloudHSM</a>)</li>
                             <li>Amazon Certificate Manager (<a href="https://aws.amazon.com/certificate-manager/">ACM</a>)</li>
                         </ul>
                     </div>
 
                     <div class="resume-item">
-                        <h4>Software Developer, IEMA R &amp; D Pvt. Ltd. </h4>
+                        <h4>Software Developer, IEM America Research and Development Pvt. Ltd., Kolkata</h4>
                         <h5>July, 2020 - December, 2020</h5>
-                        <p><em>Saltlake, Kolkata</em></p><strong>Technologies&nbsp;using&nbsp;:</strong> &ensp;Python 3, PHP, JavaScript
+                        <p><em>Kolkata, India</em></p><strong>Technologies&nbsp;using&nbsp;:</strong> &ensp;Python 3, PHP, JavaScript
                         <br><strong>Frameworks&nbsp;:</strong> &ensp;Laravel, Bootstrap
                         <br><strong>Version&nbsp;Control&nbsp;System :</strong> &ensp;Git
                         <p>
@@ -502,31 +503,16 @@
                     </div>
 
                     <div class="resume-item">
-                        <h4>Research Intern, Bhaba Atomic Research Centre</h4>
-                        <h5>Jan, 2020 - Feb, 2020 </h5>
+                        <h4>Research Intern, Bhaba Atomic Research Centre (BARC)</h4>
+                        <h5>Jan, 2019 - Feb, 2019 </h5>
                         <p><em>Mumbai, Maharastra, India </em></p>
                         <p><strong>Technology used&nbsp;: </strong> &ensp;Mathematica
                         </p>
                         <ul>
-                            <li>Solved 2 unsolved research problems in Computational Physics. </li>
-                            <li>My contribution was in simplifying the complex problem by breaking down the problem into simple decidable part.</li>
+                            <li>Worked on 2 Quantum Physics research problems with BARC scientists</li>
+                            <li>My contribution was in simplifying the complex problem by breaking down the problem into simple decidable parts</li>
                             <li>Published the research papers as a Co-author with BARC scientists</li>
-                            <li>I am eager to learn new technologies, learnt Mathematica quickly</li>
-
-                        </ul>
-
-                    </div>
-
-                    <div class="resume-item">
-                        <h4>Software Engineering Experience(Virtual), JPMorgan Chase &amp; Co.</h4>
-                        <h5>April, 2020 - May, 2020</h5>
-                        <p><em>Online </em></p><strong>Technology used&nbsp;:</strong> &ensp;Python 3, Git
-                        <p>
-                        </p>
-                        <ul>
-                            <li>Interface with a stock price data feed.</li>
-                            <li>Displayed data visually for traders using JPMorgan Chase frameworks and tools. </li>
-
+                            <li>Learnt <a href="https://www.wolfram.com/mathematica/">Mathematica</a> quickly and applied it to solve the Quantum Physics problem using computation</li>
                         </ul>
 
                     </div>
