--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                     <h3 class="resume-title">Summary</h3>
                     <div class="resume-item pb-0">
 
-                        <p>Currently working at AWS on services Identity and Access Management, AWS Cognito, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
+                        <p>Currently working at AWS on services Identity and Access Management, AWS Cognito, AWS CloudHSM, Amazon Certificate Manager (SSL Certificate), CloudTrail, Key Management Service etc. My day to day job is to provide durable, secure solution to implement a business use case for these mentioned services. Also, troubleshooting different technical issues is another big part of my job. Here is a video: https://www.youtube.com/watch?v=GC3bWcFFZTo</p>
 
                     </div>
 
@@ -454,11 +454,11 @@
                     <h3 class="resume-title">Professional Experience</h3>
                     
                     <div class="resume-item">
-                        <h4>Cloud Engineer - I, Amazon Web Services</h4>
-                        <h5>April, 2022 - Present</h5>
+                        <h4>Cloud Engineer (Security and Cryptography), Amazon Web Services</h4>
+                        <h5>January, 2021 - Present</h5>
                         <p><em>Hyderabad, India</em></p>
                         <p>
-                            My skillset includes:
+                            Everyday I assist AWS customers solve complex problems on below mentioned services while they develop applications backed by AWS services. Also, I provide architectural guidance and best practices for AWS security services to customers ranging from small startups to large Enterprises having billions of users. I have following certifications: AWS Security Speciality, AWS Solutions Architect - Professional. I am one of the Subject Matter Experts (SME) for Amazon Cognito service - a fully managed authentication and authorization service. Have received 10+ awards till date - for best performance and for project work. My skillset includes:
                         </p>
                         <ul>
                             <li>Building solutions using Cloud architecture which involves services like AWS Cognito, API Gateway, Lambda, Elastic Load Balancer, Amazon Certificate Manager, CloudTrail etc.</li>
@@ -466,15 +466,7 @@
                             <li>Invent workaround for different use-cases</li>
                             <li>As a part of Security and Cryptography team, assist customers to build secure, resilient, available architecture. Also, troubleshoot existing customer architecture issue and provide solution to fix it.</li>
                         </ul>
-                    </div>
-
-                    <div class="resume-item">
-                        <h4>Cloud Engineer (Security and Cryptography), Amazon Web Services</h4>
-                        <h5>January, 2021 - Present</h5>
-                        <p><em>India</em></p>
-                        <p>
-                            Everyday I assist AWS customers solve complex problems on below services while they develop applications backed by AWS services. Also, I provide architectural guidance and best practices for AWS security services to customers ranging from small startups to large Enterprises having billions of users. I have following certifications: AWS Security Speciality, AWS Solutions Architect - Professional. I am one of the Subject Matter Experts (SME) for Amazon Cognito service - a fully managed authentication and authorization service. Have received 10+ awards till date - for best performance and for project work.
-                        </p>
+                        <p>AWS services I work on:</p>
                         <ul>
                             <li>Identity and Access Management (<a href="https://aws.amazon.com/iam/">IAM</a>)</li>
                             <li>Amazon <a href="https://aws.amazon.com/cognito/">Cognito</a></li>
