--- a/index.html
+++ b/index.html
@@ -474,6 +474,7 @@
                             <li>AWS (<a href="https://aws.amazon.com/cloudhsm/">CloudHSM</a>)</li>
                             <li>Amazon Certificate Manager (<a href="https://aws.amazon.com/certificate-manager/">ACM</a>)</li>
                         </ul>
+                        <img src="img/certs-removebg-preview.png" class="img-fluid" alt="">
                     </div>
 
                     <div class="resume-item">
