--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
             <h1><a href="index.html" id="bigName">Tarit Goswami</a></h1>
             <!-- Uncomment below if you prefer to use an image logo -->
             <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-            <h2>I'm a <span>Cloud&nbsp;Engineer (Associate) </span> at<br><br>
+            <h2>I'm a <span>Cloud&nbsp;Engineer (Security and Cryptography) </span> at<br><br>
                 <!-- <h4><b style="color: #FF9900">amazon</b></h4> -->
                 <!-- <h4><img src="img/aws.svg" width="200"></h4> -->
                 <h4><img src="img/aws-2.svg" width="100">&nbsp;&nbsp;&nbsp;</h4>
@@ -224,7 +224,7 @@
 
             <div class="section-title">
                 <h2>About</h2>
-                <p>Learn more about me</p>
+                <p>More about me</p>
             </div>
 
             <div class="row">
@@ -233,13 +233,14 @@
                 </div>
                 <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
                     <h3>Hello! I am Tarit Goswami</h3>
-                    <p class="font-italic">
-                        I am Cloud Engineer - 1 at <a href="http://aws.amazon.com/">Amazon Web Services</a> </p>
+                    <p>
+                        I am Cloud Engineer at <a href="http://aws.amazon.com/">Amazon Web Services</a>
+                    </p>
                     <div class="row">
                         <div class="col-lg-6">
                             <ul>
 
-                                <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Degree:</strong> Bachelor of technology</li>
+                                <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Highest degree:</strong> B.&nbsp;Tech in Computer&nbsp;Science&nbsp;and&nbsp;Engineering</li>
                                 <li><i class="icofont-rounded-right" style="position: relative;"></i> <strong>Email:</strong> taritg.public@gmail.com</li>
 
                             </ul>
@@ -248,11 +249,11 @@
                     <p>
                         I enjoy solving thought-provoking problems. Currently, working at Amazon Web Services to make AWS awesome-er. Areas of interest include Data structures and Algorithms, System Design, Cloud Architecture, Security and Cryptography. <br><br>
                         <ul>
-                            <li>&#x274F Love to solve challenging problems</li>
-                            <li>&#x274F Biased for action</li>
-                            <li>&#x274F Dive deep into problems </li>
-                            <li>&#x274F I do not hesitate to (respectfully) challenge any decision which I disagree</li>
-                            <li>&#x274F Focus on long-term goals </li>
+                            <li>&#9827; Love to solve challenging problems</li>
+                            <li>&#9829; Biased for action</li>
+                            <li>&#9830; Dive deep into problems </li>
+                            <li>&#9822; I do not hesitate to (respectfully) challenge any decision which I disagree</li>
+                            <li>&#9824; Focus on long-term goals </li>
                         </ul>
                     </p>
                 </div>
@@ -308,23 +309,23 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill">Security and Cryptography <b class="val"></b></span>
+                        <span class="skill">AWS Security services <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div> -->
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">AWS Cognito <b class="val"></b></span>
+                        <span class="skill">Cryptography <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 90%;"></div> -->
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">AWS Key Management Service <b class="val"></b></span>
+                        <span class="skill">Authentication and authorization architecture design <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 80%;"></div> -->
                         </div>
                     </div>
 
@@ -333,23 +334,23 @@
                 <div class="col-lg-6">
 
                     <div class="progress">
-                        <span class="skill">Amazon Certificate Manager <b class="val"></b></span>
+                        <span class="skill">OpenId Connect (OIDC), SAML federation <b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 100%;"></div> -->
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Authentication and authorization architecture <b class="val"></b></span>
+                        <span class="skill"><b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 75%;"></div> -->
                         </div>
                     </div>
 
                     <div class="progress">
-                        <span class="skill">Troubleshooting <b class="val"></b></span>
+                        <span class="skill"><b class="val"></b></span>
                         <div class="progress-bar-wrap">
-                            <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div>
+<!--                             <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 85%;"></div> -->
                         </div>
                     </div>
 
